--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Adventure Game</title>
-	<link href="css/style.css" rel="stylesheet">
+	<title>The Hobbit</title>
+	<link href="style.css" rel="stylesheet">
+	<link rel="icon" href="img/ring.ico" type="image/gif" sizes="32x32">
 
 </head>
 <body>
@@ -13,18 +14,23 @@
 
 	<section id="level_title">Start</section>
 
+
 	<nav>
 
 		<button id="option1" onclick="javascript:Level1()">Optie 1</button>
-		<button id="option2">Optie 2</button>
-		<button id="option3">Optie 3</button>
+		<button id="option2">Options</button>
+		<button id="option3">Over het spel</button>
 
 	</nav>
-
-	<img id="level_image" class="level_image" src="img/rpg.png">
-
+	<div class="container">
+	<img id="level_image" class="w3-container" class="level_image" src="img/journey2.jpg">
+	</div>
 </main>
+    <img id="logo" src="img/logo.png" alt="hobbitlogo">
+    <img id="ring" src="img/ringanimated.gif" alt="ring">
 
-	<script src="js/game.js" type="text/javascript" ></script>
+	<script src="game.js" type="text/javascript" ></script>
+
+
 </body>
 </html>
