--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	<nav>
 
 		<button id="option1" onclick="javascript:Level1()">Optie 1</button>
-		<button id="option2">Options</button>
-		<button id="option3">Over het spel</button>
+		<button id="option2" onclick="javascript:Options()">Options</button>
+		<button id="option3" onclick="javascript:Over()">Over het spel</button>
 
 	</nav>
 	<div class="container">
@@ -28,6 +28,10 @@
 </main>
     <img id="logo" src="img/logo.png" alt="hobbitlogo">
     <img id="ring" src="img/ringanimated.gif" alt="ring">
+
+    <audio autoplay="autoplay">
+     <source src="music/dreaming.mp3" />     
+ </audio>
 
 	<script src="game.js" type="text/javascript" ></script>
 
