--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <img id="logo" src="img/logo.png" alt="hobbitlogo">
     <img id="ring" src="img/ringanimated.gif" alt="ring">
 
-    <audio autoplay="autoplay">
-     <source src="music/dreaming.mp3" />     
+    <audio autoplay="autoplay" controls="controls">
+     <source src="music/oldfriends.mp3" />     
  </audio>
 
 	<script src="game.js" type="text/javascript" ></script>
