--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
      <source src="music/oldfriends.mp3" />     
  </audio>
 
-	<script src="game.js" type="text/javascript" ></script>
+<div class="wrapper">
+  <input type="checkbox" name="toggle" id="toggle">
+  <label for="toggle"></label>
+</div>
+
+	<script src="game.js" type="text/javascript"></script>
 
 
 </body>
