--- a/index.html
+++ b/index.html
@@ -25,18 +25,18 @@
 	<div class="container">
 	<img id="level_image" class="w3-container" class="level_image" src="img/journey2.jpg">
 	</div>
+
 </main>
+     <div>
     <img id="logo" src="img/logo.png" alt="hobbitlogo">
     <img id="ring" src="img/ringanimated.gif" alt="ring">
+    </div>
 
-    <audio autoplay="autoplay" controls="controls">
+    <audio id="bgaudio" loop>
      <source src="music/oldfriends.mp3" />     
  </audio>
 
-<div class="wrapper">
-  <input type="checkbox" name="toggle" id="toggle">
-  <label for="toggle"></label>
-</div>
+<button id="musicbutton" onclick="javascript:bgAudio()">Music On/Off</button>
 
 	<script src="game.js" type="text/javascript"></script>
 
