--- a/index.html
+++ b/index.html
@@ -20,23 +20,20 @@
 		<button id="option1" onclick="javascript:Level1()">Optie 1</button>
 		<button id="musicbutton" onclick="javascript:bgAudio()">Music On/Off</button>
 		<button id="toggle">Over het spel</button>
-<div id="content">Dit spel gaat over The Hobbit: An Unexpected Journey. het is het eerste deel van de driedelige filmreeks gebaseerd op het gelijknamige boek van J.R.R. Tolkien.</div>
+<div id="content">Dit spel gaat over The Hobbit: <i>An Unexpected Journey</i>. het is het eerste deel van de driedelige filmreeks gebaseerd op het gelijknamige boek van J.R.R. Tolkien.<br> Je loopt het verhaal door zoals in de film. Je kan de muziek aan of uit zetten. Klik op de <b>"Play Game"</b> knop om te beginnen!</div>
 
 	</nav>
 	<div class="container">
-	<img id="level_image" class="w3-container" class="level_image" src="img/journey2.jpg">
+	<img id="level_image" class="w3-container" class="level_image" src="img/journey.jpg">
 	</div>
 
 </main>
      <div>
     <img id="logo" src="img/logo.png" alt="hobbitlogo">
     <img id="ring" src="img/ringanimated.gif" alt="ring">
-
     </div>
-
- 
-
-    <audio id="bgaudio" loop>
+  
+    <audio id="bgaudio" loop >
      <source src="music/oldfriends.mp3" />     
  </audio>
 
