--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<button id="option1" onclick="javascript:Level1()">Optie 1</button>
 		<button id="musicbutton" onclick="javascript:bgAudio()">Music On/Off</button>
 		<button id="toggle">Over het spel</button>
+
 <div id="content">Dit spel gaat over The Hobbit: <i>An Unexpected Journey</i>. het is het eerste deel van de driedelige filmreeks gebaseerd op het gelijknamige boek van J.R.R. Tolkien.<br> Je loopt het verhaal door zoals in de film. Je kan de muziek aan of uit zetten. Klik op de <b>"Play Game"</b> knop om te beginnen!</div>
 
 	</nav>
@@ -27,6 +28,11 @@
 	<img id="level_image" class="w3-container" class="level_image" src="img/journey.jpg">
 	</div>
 
+	<div id="level_video">
+   <iframe id="youtubevideo" width="758" height="508" src="https://www.youtube.com/embed/2qY7sihoqVA?&start=53&showinfo=0&iv_load_policy=1&controls=0&autoplay=0&rel=0" frameborder="0" allowfullscreen></iframe>
+	</div>
+
+	
 </main>
      <div>
     <img id="logo" src="img/logo.png" alt="hobbitlogo">
